--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         footer{
             position: absolute;
             bottom: 0;
+            color: rgb(110, 120, 150);
         }
     </style>
 </head>
