--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             justify-content: space-between;
             align-items: center;
         }
+        .content{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
         input{
             border-radius: 8px;
             width: 20rem;
@@ -53,7 +59,7 @@
             <br/><br/>
             <p id="result"></p>
         </div>
-        <footer><p>Created by Gaurav Kulkarni 2024</p></footer>
+        <footer><p>2024 Gaurav Kulkarni</p></footer>
     </div>
 
     <script>
